--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           echo test, and deploy your project.
           cd BoardGameList-CleanArchi
           bundle install
-          bundle exec fastlane build_project
+          bundle exec fastlane tests
