--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          cd BoardGameList-CleanArchi
-          bundle install
-          bundle exec pod install
-          bundle exec fastlane tests
+           echo Hello, world!
+   
+      - uses: actions/checkout@v2
+        with:
+          repository: git@github.com:Kannelle-io/knl-sdk-ios.git 
+          token: ${{ secrets.ACCESS_TOKEN }}
+   
