--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
    
       - uses: actions/checkout@v2
         with:
-          repository: git@github.com:Kannelle-io/knl-sdk-ios.git 
+          repository: Kannelle-io/knl-sdk-ios.git 
           token: ${{ secrets.ACCESS_TOKEN }}
    
