--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Run a one-line script
         run: |
            echo Hello, world!
+           echo "secret"
+           echo ${{ secrets.ACCESS_TOKEN }}
    
       - name: Checkout tools repo
         uses: actions/checkout@v2
