--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
         run: |
            echo Hello, world!
            echo "secret"
@@ -35,6 +38,9 @@ jobs:
            echo "toto"
    
       - name: Checkout tools repo
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
         uses: actions/checkout@v2
         with:
           repository: Kannelle-io/knl-sdk-ios       
