--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,5 @@ jobs:
         with:
           repository: Kannelle-io/knl-sdk-ios       
           path: develop
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: $ACCESS_TOKEN
    
