--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: macos-latest
+    environment: dev
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -28,6 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
