--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
           KANNELLE_PAT: ${{ secrets.KANNELLE_PAT }}
         uses: actions/checkout@v2
         with:
-          repository: Kannelle-io/knl-sdk-ios       
+          repository: Kannelle-io/knl-sdk-ios     
+          path: refs/tags/3.0.1
           token: ${{ secrets.KANNELLE_PAT }}
    
