--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,15 +43,25 @@ jobs:
            echo "toto"
            echo $TEST_VAR
            echo "toto2"
-
-      - name: Checkout tools repo
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
-          KANNELLE_PAT: ${{ secrets.KANNELLE_PAT }}
+           
+      - name: Checkout repo knl-sdk-ios
         uses: actions/checkout@v2
         with:
-          repository: Kannelle-io/knl-sdk-ios     
+          repository: Kannelle-io/knl-sdk-ios      
           ref: 3.0.1
+          path: ./..
           token: ${{ secrets.KANNELLE_PAT }}
+
+      - name: Checkout repo knl-sdk-ios-rn
+        uses: actions/checkout@v2
+        with:
+          repository: Kannelle-io/knl-sdk-ios-rn     
+          ref: 3.0.1
+          path: ./..
+          token: ${{ secrets.KANNELLE_PAT }}
+      
+      - name: Setup bundle env
+        run: |   
+          echo $PWD
+          echo $(ls)       
    
