--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           repository: Kannelle-io/knl-sdk-ios      
           ref: 3.0.1
-          path: ..
+          path: .
           token: ${{ secrets.KANNELLE_PAT }}
 
       - name: Checkout repo knl-sdk-ios-rn
