--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           repository: Kannelle-io/knl-sdk-ios      
           ref: 3.0.1
-          path: .
+          path: knl-sdk-ios  
           token: ${{ secrets.KANNELLE_PAT }}
 
       - name: Checkout repo knl-sdk-ios-rn
@@ -57,7 +57,7 @@ jobs:
         with:
           repository: Kannelle-io/knl-sdk-ios-rn     
           ref: 3.0.1
-          path: .
+          path: knl-sdk-ios-rn 
           token: ${{ secrets.KANNELLE_PAT }}
       
       - name: Setup bundle env
