--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: main
-
+          node-version: '16'
 
       - name: Checkout repo knl-app
         uses: actions/checkout@v2
@@ -37,6 +37,7 @@ jobs:
           ref: test-tag-4
           path: knl-app
           token: ${{ secrets.KANNELLE_PAT }}
+          node-version: '16'
           
       - name: Checkout repo knl-sdk-ios
         uses: actions/checkout@v2
@@ -45,6 +46,7 @@ jobs:
           ref: 3.0.1
           path: knl-sdk-ios  
           token: ${{ secrets.KANNELLE_PAT }}
+          node-version: '16'
 
       - name: Checkout repo knl-sdk-ios-rn
         uses: actions/checkout@v2
@@ -53,6 +55,7 @@ jobs:
           ref: 3.0.1
           path: knl-sdk-ios-rn 
           token: ${{ secrets.KANNELLE_PAT }}
+          node-version: '16'
           
       - name: Setup bundle env
         run: |          
@@ -64,7 +67,7 @@ jobs:
           cd knl-app/ios  
           bundle exec fastlane match appstore --readonly
       
-      - name: Fastlane release staging
+      - name: Fastlane release staging        
         run: |          
           cd knl-app/ios  
           bundle exec fastlane archive --env staging
