--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: main
+       
+      - uses: actions/setup-node@v2
+        with:      
           node-version: '16'
 
       - name: Checkout repo knl-app
@@ -37,7 +40,6 @@ jobs:
           ref: test-tag-4
           path: knl-app
           token: ${{ secrets.KANNELLE_PAT }}
-          node-version: '16'
           
       - name: Checkout repo knl-sdk-ios
         uses: actions/checkout@v2
@@ -46,7 +48,6 @@ jobs:
           ref: 3.0.1
           path: knl-sdk-ios  
           token: ${{ secrets.KANNELLE_PAT }}
-          node-version: '16'
 
       - name: Checkout repo knl-sdk-ios-rn
         uses: actions/checkout@v2
@@ -55,7 +56,6 @@ jobs:
           ref: 3.0.1
           path: knl-sdk-ios-rn 
           token: ${{ secrets.KANNELLE_PAT }}
-          node-version: '16'
           
       - name: Setup bundle env
         run: |          
