--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
           echo $(ls)
           REPO_URL="https://github.com/Kannelle-io/knl-sdk-ios.git"
           git -c http.$REPO_URL.extraHeader="Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" clone $REPO_URL
+          mkdir knl-sdk-ios
+          cd knl-sdk-ios
           git clone $REPO_URL
           
 
