--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,16 +32,48 @@ jobs:
       - uses: actions/setup-node@v2
         with:      
           node-version: '16'
-          
+
       - name: Test
         run: |
-          echo $(PWD)
-          echo $(ls)
-          REPO_URL="https://github.com/Kannelle-io/knl-sdk-ios.git"
-          git -c http.$REPO_URL.extraHeader="Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" clone $REPO_URL
-          mkdir knl-sdk-ios
-          cd knl-sdk-ios
-          git clone $REPO_URL
-          
+          REPO_URL="ssh://git@github.com/Kannelle-io/react-native-simple-store.git"
+          git config --global --add ssh.$REPO_URL.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}"
 
-     
+      - name: Checkout repo knl-app
+        uses: actions/checkout@v2
+        with:
+          repository: Kannelle-io/knl-app
+          ref: test-tag-4
+          path: knl-app
+          token: ${{ secrets.KANNELLE_PAT }}
+          
+      - name: Checkout repo knl-sdk-ios
+        uses: actions/checkout@v2
+        with:
+          repository: Kannelle-io/knl-sdk-ios      
+          ref: 3.0.1
+          path: knl-sdk-ios  
+          token: ${{ secrets.KANNELLE_PAT }}
+
+      - name: Checkout repo knl-sdk-ios-rn
+        uses: actions/checkout@v2
+        with:
+          repository: Kannelle-io/knl-sdk-ios-rn     
+          ref: 3.0.1
+          path: knl-sdk-ios-rn 
+          token: ${{ secrets.KANNELLE_PAT }}
+          
+      - name: Setup bundle env
+        run: |          
+          cd knl-app/ios          
+          bundle install
+      
+      - name: Fastlane match
+        run: |          
+          cd knl-app/ios  
+          bundle exec fastlane match appstore --readonly
+      
+      - name: Fastlane release staging        
+        run: |          
+          cd knl-app/ios  
+          bundle exec fastlane archive --env staging
+   
