--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: main
+
+      - uses: actions/setup-node@v2
+        with:      
+          node-version: '16'
