--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,11 @@ jobs:
           path: knl-sdk-ios-rn 
           token: ${{ secrets.KANNELLE_PAT }}
           
+      - name: Setup bundle env
+        run: |          
+          cd knl-app/ios          
+          bundle install
+          
       - name: Fastlane match
         run: |          
           cd knl-app/ios  
