--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,29 +40,17 @@ jobs:
           ref: test-phets-2
           path: knl-app
           token: ${{ secrets.KANNELLE_PAT }}
-          
-      - name: Checkout repo knl-sdk-ios
-        uses: actions/checkout@v2
-        with:
-          repository: Kannelle-io/knl-sdk-ios      
-          ref: 3.0.1
-          path: knl-sdk-ios  
-          token: ${{ secrets.KANNELLE_PAT }}
-
-      - name: Checkout repo knl-sdk-ios-rn
-        uses: actions/checkout@v2
-        with:
-          repository: Kannelle-io/knl-sdk-ios-rn     
-          ref: 3.0.1
-          path: knl-sdk-ios-rn 
-          token: ${{ secrets.KANNELLE_PAT }}
-          
+                 
       - name: Git credentials for npm install
         run: |
           REPO_URL="https://github.com/Kannelle-io/react-native-simple-store.git"
           git config --global --add http.$REPO_URL.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
           REPO_URL2="https://github.com/Kannelle-io/react-native-camera.git"
-          git config --global --add http.$REPO_URL2.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
+          git config --global --add http.$REPO_URL2.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}"
+          REPO_URL3="https://github.com/Kannelle-io/knl-sdk-ios.git"
+          git config --global --add http.$REPO_URL3.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
+          REPO_URL4="https://github.com/Kannelle-io/knl-sdk-ios-rn.git"
+          git config --global --add http.$REPO_URL4.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
       
       - name: Setup bundle env
         run: |          
@@ -79,3 +67,7 @@ jobs:
           cd knl-app/ios  
           bundle exec fastlane archive --env staging
    
+      - name: tsc compile
+        uses: iCrawl/action-tsc@v1
+        with:
+          project: knl-app/tsconfig.json
