--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,22 @@ jobs:
           path: knl-app
           token: ${{ secrets.KANNELLE_PAT }}
                  
+      - name: Checkout repo knl-sdk-ios
+        uses: actions/checkout@v2
+        with:
+          repository: Kannelle-io/knl-sdk-ios      
+          ref: 3.0.1
+          path: knl-sdk-ios  
+          token: ${{ secrets.KANNELLE_PAT }}
+
+      - name: Checkout repo knl-sdk-ios-rn
+        uses: actions/checkout@v2
+        with:
+          repository: Kannelle-io/knl-sdk-ios-rn     
+          ref: 3.0.1
+          path: knl-sdk-ios-rn 
+          token: ${{ secrets.KANNELLE_PAT }}        
+         
       - name: Git credentials for npm install
         run: |
           REPO_URL="https://github.com/Kannelle-io/react-native-simple-store.git"
@@ -56,11 +72,6 @@ jobs:
         run: |          
           cd knl-app/ios          
           bundle install
-          
-      - name: Fastlane repo init
-        run: |          
-          cd knl-app/ios          
-          bundle exec fastlane repo_init
           
       - name: Fastlane match
         run: |          
