--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: Kannelle-io/knl-app
-          ref: ft-scenario-native-view-ios-github-action
+          ref: test-phets-4
           path: knl-app
           token: ${{ secrets.KANNELLE_PAT }}
                  
