--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,21 +40,7 @@ jobs:
           ref: ft-scenario-native-view-ios-github-action
           path: knl-app
           token: ${{ secrets.KANNELLE_PAT }}
-                 
-      - name: Checkout repo knl-sdk-ios
-        uses: actions/checkout@v2
-        with:
-          repository: Kannelle-io/knl-sdk-ios      
-          path: knl-sdk-ios  
-          token: ${{ secrets.KANNELLE_PAT }}
-
-      - name: Checkout repo knl-sdk-ios-rn
-        uses: actions/checkout@v2
-        with:
-          repository: Kannelle-io/knl-sdk-ios-rn     
-          path: knl-sdk-ios-rn 
-          token: ${{ secrets.KANNELLE_PAT }}        
-         
+                       
       - name: Git credentials for npm install
         run: |
           REPO_URL="https://github.com/Kannelle-io/react-native-simple-store.git"
@@ -71,6 +57,18 @@ jobs:
           npm install react-native-cli@2.0.1 -g
           npm install typescript@3.7.5 -g
           
+      - name: Git clone knl-sdk-ios
+        run: |          
+          mkdir knl-sdk-ios
+          cd knl-sdk-ios
+          git clone https://github.com/Kannelle-io/knl-sdk-ios.git
+          
+      - name: Git clone knl-sdk-ios-rn
+        run: |          
+          mkdir knl-sdk-ios-rn
+          cd knl-sdk-ios-rn
+          git clone https://github.com/Kannelle-io/knl-sdk-ios-rn.git
+   
       - name: Setup bundle env
         run: |          
           cd knl-app/ios          
