--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,12 +61,14 @@ jobs:
         run: |          
           mkdir knl-sdk-ios
           cd knl-sdk-ios
+          echo $(ls)
           git clone https://github.com/Kannelle-io/knl-sdk-ios.git
           
       - name: Git clone knl-sdk-ios-rn
         run: |          
           mkdir knl-sdk-ios-rn
           cd knl-sdk-ios-rn
+          echo $(ls)
           git clone https://github.com/Kannelle-io/knl-sdk-ios-rn.git
    
       - name: Setup bundle env
