--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
   push:
     tags: 
       - 'test-tag-*'
+      - 'i-*-stage'
+      - 'i-*'
     branches:
       - master
 
@@ -28,49 +30,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: main
-       
-      - uses: actions/setup-node@v2
-        with:      
-          node-version: '16'
-
-      - name: Checkout repo knl-app
-        uses: actions/checkout@v2
-        with:
-          repository: Kannelle-io/knl-app
-          ref: ft-scenario-native-view-ios-github-action
-          path: knl-app
-          token: ${{ secrets.KANNELLE_PAT }}
-                       
-      - name: Git credentials for npm install
-        run: |
-          REPO_URL="https://github.com/Kannelle-io/react-native-simple-store.git"
-          git config --global --add http.$REPO_URL.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
-          REPO_URL2="https://github.com/Kannelle-io/react-native-camera.git"
-          git config --global --add http.$REPO_URL2.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}"
-          REPO_URL3="https://github.com/Kannelle-io/knl-sdk-ios.git"
-          git config --global --add http.$REPO_URL3.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
-          REPO_URL4="https://github.com/Kannelle-io/knl-sdk-ios-rn.git"
-          git config --global --add http.$REPO_URL4.extraHeader "Authorization: Basic ${{ secrets.KANNELLE_PAT_BASE64 }}" 
-      
+   
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+   
       - name: Setup tools
         run: |          
-          npm install react-native-cli@2.0.1 -g
-          npm install typescript@3.7.5 -g
+          echo "version"
+          echo ${{ steps.get_version.outputs.VERSION }}
           
-      - name: Git clone knl-sdk-ios
-        run: |          
-          git clone https://github.com/Kannelle-io/knl-sdk-ios.git
-          
-      - name: Git clone knl-sdk-ios-rn
-        run: |          
-          git clone https://github.com/Kannelle-io/knl-sdk-ios-rn.git
-   
-      - name: Setup bundle env
-        run: |          
-          cd knl-app/ios          
-          bundle install
-    
-      - name: Fastlane release staging        
-        run: |          
-          cd knl-app/ios  
-          bundle exec fastlane release --env staging --verbose
+
