--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ on:
       - 'test-tag-*'
       - 'i-*-stage'
       - 'i-*'
-    branches:
-      - master
+#    branches:
+#      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
