--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
         id: get_env
         run: |
           ENV="prod"
-          if [[ ${{ steps.get_version.outputs.VERSION }} == "stage" ]]; then
-            ENV="stage"        
+          if contains(${{ steps.get_version.outputs.VERSION }}, 'stage') then
+            ENV="stage
           fi
           echo ::set-output name=ENV::$ENV
    
